static/css/style.css
/* General styling */
body {
    background-color: #f0f0f0;
    font-family: Arial, sans-serif;
}

/* Ensure the HTML and body take up the full height */
html, body {
    height: 100%;
}

/* Content wrapper to push the footer to the bottom */
.content-wrapper {
    min-height: calc(100vh - 56px); /* Subtracting the height of the navbar */
    display: flex;
    flex-direction: column;
}

/* Heading styling */
h1 {
    color: #333;
    text-align: center;
    margin-top: 50px;
}

/* General styling for alerts */
.alert {
    margin-top: 10px;
}

/* Styling for the close button inside the alerts */
.close {
    outline: none;
}

/* Footer should always be at the bottom */
.footer {
    margin-top: auto;
    background-color: #343a40 !important; /* Light background color to match the navbar */
    padding: 10px 0; /* Padding to give some space inside the footer */
    color: #ffffff !important; /* White text color */
    box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.1);
    text-align: center; /* Center the text */
    
}

.footer .text-muted {
    color: #ffffff !important; 
    font-weight: bold; /* Make text bold */
    /* text-align: center;  Center the text */
}    


/* Navbar Custom Styles */
nav.navbar {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Adding a subtle shadow */
    background-color: #343a40 !important;
}

.navbar-brand {
    color: #ffffff !important; /* Change color to white */
    font-weight: bold; /* Make text bold */
}

.nav-link {
    padding: 10px 15px;
    color: #ffffff !important; /* Bootstrap primary color */
    font-weight: bold; /* Make text bold */
}

.nav-link:hover {
    background-color: #e2e6ea;  /* Light background on hover */
    color: #343a40 !important; /* Darker color on hover */
    border-radius: 5px;
}

.nav-link.active {
    color: #fff; /* White text for active link */
    background-color: #007bff; /* Slightly darker than the light background */
    border-radius: 5px;
}

